--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,9 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "future": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp",
+        "coroutine": "cpp",
+        "regex": "cpp"
     }
 }
